[package]
name = "multissh"
version = "0.1.0"
authors = ["Magnus Landerblom <magnus@landerblom.se>"]
edition = "2018"
description = "multissh mandatory description"
repository = "https://github.com/snichme/multissh"
license = "MIT"

[dependencies]
futures = { version = "0.3.*"}
log = "0.4.*"
env_logger = "0.7.*"
tokio = { version = "0.2", features = ["full"] }
openssh = "0.6.2"
structopt = "0.3"
rand = "0.7.3"
edit = "0.1.2"
